AI-JADEDEVS4/src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>ActiveOnImport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created primarily for migration purposes. All pricebooks/entries must be active during migration. Stores the default activity state for an entry so that I can be restored post-migration.</description>
        <inlineHelpText>Created primarily for migration purposes. Stores the default activity state for an entry so that I can be restored post-migration.</inlineHelpText>
        <label>ActiveOnImport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pricebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pricebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Was_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For storing state during migration.</description>
        <label>Was Inactive</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>